--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^3.14.0",
+    "@prisma/client": "^3.11.0-integration-fix-empty-path.1",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
