--- a/server/package.json
+++ b/server/package.json
@@ -4,14 +4,15 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
-    "prisma": "^3.14.0",
-    "netlify-cli": "^3.37.1"
+    "netlify-cli": "^3.37.1",
+    "prisma": "^3.14.0"
   },
   "scripts": {
     "build": "prisma generate",
     "dev": "netlify dev"
   },
   "dependencies": {
-    "@prisma/client": "2.24.1"
+    "@prisma/client": "2.24.1",
+    "serverless-http": "^3.0.1"
   }
 }
