--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,7 @@
     "dev": "netlify dev"
   },
   "dependencies": {
-    "@prisma/client": "2.24.1",
+    "@prisma/client": "^3.14.0",
     "express": "^4.18.1",
     "serverless-http": "^3.0.1"
   }
