--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@prisma/client": "^3.14.0",
     "express": "^4.18.1",
-    "serverless-http": "^3.0.1"
+    "serverless-http": "^3.0.1",
+    "uuid": "^8.3.2"
   }
 }
